--- a/matakuliah.html
+++ b/matakuliah.html
@@ -13,6 +13,7 @@
 	<li>Logika Informatika</li>
 	<li>Pendidikan Kewarganegaraan</li>
 	<li>Pengantar Manajemen</li>
+	<li>Matematika Dasar</>
 		<h2>Semester 2 :</h2>
 		<li>Aljabar Linier</li>
 		<li>Bahasa Indonesia</li>
@@ -21,7 +22,7 @@
 		<li>Dasar - Dasar Sistem Informasi</li>
 		<li>Jatidiri Kanjuruhan</li>
 		<li>Komunikasi Bisnis Dan Teknis</li>
-		<li>Pendidikan Agama Islam</li>
+		<li>Pendidikan Agama Kristen Protestan</li>
 		<li>Pendidikan Pancasila</li>
 			<h2>Semester 3 :</h2>
 			<li>Analisis Dan Visualisasi Data</li>
